# fibsem-tools

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  cell_mask.py  convert-to-n5.bsh  ground_truth_test.py  index.html  initialize_metadata.py  mkdocs.yml  objects.inv  params.yaml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: pytest.yml  upload_pypi.yml
api/chunk/: index.html
api/cli/serve/: index.html
api/cli/tiff2zarr/: index.html
api/cli/zarr2json/: index.html
api/cli/zarr_scan/: index.html
api/coordinate/: index.html
api/io/core/: index.html
api/io/dask/: index.html
api/io/dat/: index.html
api/io/h5/: index.html
api/io/mrc/: index.html
api/io/multiscale/: index.html
api/io/n5/: index.html
api/io/n5/core/: index.html
api/io/n5/hierarchy/cosem/: index.html
api/io/n5/hierarchy/neuroglancer/: index.html
api/io/neuroglancer/: index.html
api/io/server/: index.html
api/io/tif/: index.html
api/io/util/: index.html
api/io/xr/: index.html
api/io/zarr/: index.html
api/io/zarr/core/: index.html
api/io/zarr/hierarchy/ome_ngff/: index.html
api/io/zarr/hierarchy/omengff/: index.html
api/metadata/groundtruth/: index.html
api/metadata/neuroglancer/: index.html
api/metadata/transform/: index.html
api/server/: index.html
api/type/: index.html
benchmarks/: benchmark_fibsem_h5.py  get_dat_files.sh
docs/: index.md
docs/api/: chunk.md  coordinate.md  server.md  type.md
docs/api/cli/: serve.md  tiff2zarr.md  zarr2json.md  zarr_scan.md
docs/api/io/: core.md  dask.md  dat.md  h5.md  mrc.md  multiscale.md  n5.md  neuroglancer.md  server.md  tif.md  util.md  xr.md  zarr.md
docs/api/io/n5/: core.md
docs/api/io/n5/hierarchy/: cosem.md  neuroglancer.md
docs/api/io/zarr/: core.md
docs/api/io/zarr/hierarchy/: ome_ngff.md
docs/api/metadata/: groundtruth.md  neuroglancer.md  transform.md
fst/: __init__.py  distributed.py  fibsem.py  ingest.py  pyramid.py
fst/attrs/: __init__.py  attrs.py
fst/io/: __init__.py  fibsem.py  ingest.py  io.py  mrc.py  schemas.py  tensorstore.py
fst/scripts/: __init__.py  dat_to_n5.py  hess_release_pyramids.py  s3cp.py  save_multiscale.py  update_volumesource_db.py
fst/scripts/beanshell/: crop-proofreading-block.bsh  n5-crop.bsh
fst/scripts/python/: cell_mask.py  consolidate_dataset.py  dat_to_n5.py  s3cp.py
scripts/: gt_upload.py  multiscale_benchmark.py
scripts/beanshell/: export-2nm-hdf5.bsh  export-2nm-tiff.bsh
scripts/python/: chunked_storage.py  dat_extended_metadata.py  dat_to_n5.py  ingest.py  initialize_metadata.py
src/fibsem-tools/io/: __init__.py  fibsem.py  mrc.py  tensorstore.py
src/fibsem-tools/scripts/: dat_extended_metadata.py  s3cp.py
src/fibsem_tools/: __init__.py  _dataset.py  _supabase.py  chunk.py  coordinate.py  dataset.py  server.py  tree.py  type.py  types.py
src/fibsem_tools/attrs/: __init__.py  attrs.py
src/fibsem_tools/cli/: array_copy.py  base.py  copy.py  fst.py  save_single_chunked.py  serve.py  test.py  tiff2zarr.css  tiff2zarr.py  zarr-to-json.py  zarr2json.py  zarr_scan.py
src/fibsem_tools/cli/db/: __init__.py  base.py  image.py  query_image.py  update_image.py
src/fibsem_tools/cli/label/: __init__.py  base.py  crop_to_zarr.py  split_annotation.py
src/fibsem_tools/io/: __init__.py  airtable.py  core.py  dask.py  dat.py  fibsem.py  fibsem_h5.py  h5.py  ingest.py  io.py  mrc.py  multiscale.py  neuroglancer.py  server.py  storage.py  tensorstore.py  tif.py  types.py  util.py  xr.py  zarr.py
src/fibsem_tools/io/n5/: __init__.py  core.py
src/fibsem_tools/io/n5/hierarchy/: cosem.py  neuroglancer.py
src/fibsem_tools/io/zarr/: __init__.py  core.py
src/fibsem_tools/io/zarr/hierarchy/: ome_ngff.py  omengff.py
src/fibsem_tools/metadata/: cosem.py  generate_multiscale_spec.py  groundtruth.py  multiscale_generation.py  neuroglancer.py  old_to_new_meta.py  ome-ngff.py  ome_ngff.py  split_annotation.py  split_annotations.py  transform.py
src/fibsem_tools/scripts/: convert.py  make_multiscale.py  styles.css  update_volumesource_db.py
src/fst/: pyramid.py
src/fst/attrs/: attrs.py
src/fst/io/: io.pyi
tests/: conftest.py  test_airtable.py  test_attrs.py  test_chunk.py  test_coordinate.py  test_core.py  test_dask.py  test_dataset.py  test_fibsem.py  test_h5.py  test_metadata.py  test_mrc.py  test_multiscale.py  test_n5.py  test_pyramid.py  test_storage.py  test_tif.py  test_types.py  test_util.py  test_xarray.py  test_zarr.py
tests/io/: test_core.py  test_cosem.py  test_dask.py  test_dat.py  test_h5.py  test_mrc.py  test_n5.py  test_neuroglancer.py  test_tif.py  test_zarr.py
tests/metadata/: test_cosem.py  test_neuroglancer.py
