[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fibsem-tools"
dynamic = ["version"]
description = 'Tools for processing FIBSEM datasets'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["fibsem", "zarr", "n5"]
authors = [
  { name = "Davis Vann Bennett", email = "davis.v.bennett@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "distributed >=2021.10.0",
  "h5py >= 3.1.0, <4",
  "fsspec[s3] >= 2022.2.0",
  "zarr >= 2.18, <3",
  "mrcfile >=1.2.0, <2",
  "xarray >=2024.10.0",
  "backoff >=1.10.0, <2",
  "xarray-ome-ngff >= 3.1.1, <4",
  "xarray-multiscale >= 2.1.0, <3",
  "tifffile >=2023.2.28",
  "click >= 8.1.3, <9",
  "dask >=2023.3.2",
  "cellmap-schemas >= 0.8.0, <1",
  "imagecodecs >= 2024.1.1"]

[project.urls]
Documentation = "https://github.com/janelia-cellmap/fibsem-tools#readme"
Issues = "https://github.com/janelia-cellmap/fibsem-tools/issues"
Source = "https://github.com/janelia-cellmap/fibsem-tools"

[project.scripts]
fst = "fibsem_tools.cli.fst:fst"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/fibsem_tools/_version.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
   "pytest-cov==5.0.0",
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run = "run-coverage --no-cov"
run-verbose = "run-coverage --verbose"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fibsem_tools tests}"

[tool.hatch.envs.docs]
dependencies = [
"mkdocs-material == 9.1.18",
 "mkdocstrings[python] == 0.22.0",
 "pytest-examples == 0.0.9"
  ]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve --watch=src"

[tool.coverage.run]
source_pkgs = ["fibsem_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/fibsem_tools/_version.py",
]

[tool.coverage.paths]
fibsem_tools = ["src/fibsem_tools", "*/fibsem-tools/src/fibsem_tools"]
tests = ["tests", "*/fibsem-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true